[package]
name = "rocket-etagged-file-response"
version = "0.1.0"
authors = ["Magic Len <len@magiclen.org>"]
repository = "https://github.com/magiclen/rocket-etagged-file-response"
homepage = "https://magiclen.org/rocket-etagged-file-response"
keywords = ["rocket", "server", "web", "http", "etag"]
categories = ["web-programming"]
description= "This crate provides a response struct used for offering static files with **Etag** cache."
readme = "README.md"
license = "MIT"

[dependencies]
rocket = "0.3.15"
rocket_codegen = "0.3.15"
mime_guess = "1.8.6"
crc = "1.8.1"
rocket-etag-if-none-match = "0.1.0"